fixing the bug of animation and disable on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
     padding: 0;
     font-family: "Outfit","Tiro Bangla", sans-serif;
 }
+
 @layer base {
   html, body {
     @apply overflow-x-hidden;
@@ -25,20 +26,20 @@
 @layer utilities {
     @media (min-width: 200px) {
     .padding {
-      padding-top: 80px;
+      padding-top: 100px;
     }
   }
 
 
   @media (min-width: 400px) and (max-width: 700px) {
     .padding {
-      padding-top: 120px;
+      padding-top: 150px;
     }
   }
 
    @media (min-width: 701px){
     .padding {
-      padding-top: 150px;
+      padding-top: 120px;
     }
   }
 }
